@@ -56,6 +56,11 @@ The presence of a "build" command within the document output directory
 explicitly requires document_build=build. Minor INCOMPATIBILITY, need to
 adjust session ROOT options.
 
+* Option "document_preprocessor" specifies the name of an executable
+that is run within the document output directory, after preparing the
+document sources and before the actual build process. This allows to
+apply adhoc patches, without requiring a separate "build" script.
+
 * Isabelle .sty files are automatically generated within the document
 output directory; former "isabelle latex -o sty" has been discontinued.
 Minor INCOMPATIBILITY in document build scripts.
